// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PostLoadIndicator Component renders as a page 1`] = `
<Styled(Content)
  scrollEnabled={false}
>
  <PlaceholderContainer
    animatedComponent={
      <LinearGradient
        colors={
          Array [
            "#eee",
            "#ddd",
            "#eee",
          ]
        }
        end={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        start={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        style={
          Object {
            "flex": 1,
            "width": 125,
          }
        }
      />
    }
    delay={1000}
    duration={1000}
  >
    <Styled(ViewNB)
      key="-1"
    >
      <Placeholder
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#eee",
              "borderRadius": 2.5,
              "height": 10,
              "justifyContent": "center",
              "marginTop": 10,
            },
            Object {
              "width": "50%",
            },
            Object {
              "marginHorizontal": 15,
              "marginTop": 15,
            },
          ]
        }
      />
      <Styled(ViewNB)
        style={
          Object {
            "backgroundColor": "#eee",
            "height": 1,
            "marginHorizontal": 15,
            "marginTop": 15,
          }
        }
      />
    </Styled(ViewNB)>
    <BarIndicator
      delay={40}
      key="0"
      paragraph={true}
    />
    <BarIndicator
      delay={92.5}
      key="105"
      paragraph={true}
    />
    <BarIndicator
      delay={145}
      key="210"
      paragraph={true}
    />
    <BarIndicator
      delay={197.5}
      key="315"
      paragraph={true}
    />
    <BarIndicator
      delay={250}
      key="420"
      paragraph={true}
    />
    <BarIndicator
      delay={302.5}
      key="525"
      paragraph={true}
    />
    <BarIndicator
      delay={355}
      key="630"
      paragraph={true}
    />
    <BarIndicator
      delay={407.5}
      key="735"
      paragraph={true}
    />
    <BarIndicator
      delay={460}
      key="840"
      paragraph={true}
    />
    <BarIndicator
      delay={512.5}
      key="945"
      paragraph={true}
    />
    <BarIndicator
      delay={565}
      key="1050"
      paragraph={true}
    />
    <BarIndicator
      delay={617.5}
      key="1155"
      paragraph={true}
    />
  </PlaceholderContainer>
</Styled(Content)>
`;

exports[`Testing PostLoadIndicator Component renders as expected 1`] = `
<Styled(Content)
  scrollEnabled={false}
>
  <PlaceholderContainer
    animatedComponent={
      <LinearGradient
        colors={
          Array [
            "#eee",
            "#ddd",
            "#eee",
          ]
        }
        end={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        start={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        style={
          Object {
            "flex": 1,
            "width": 125,
          }
        }
      />
    }
    delay={1000}
    duration={1000}
  >
    <BarIndicator
      delay={0}
      key="0"
    />
  </PlaceholderContainer>
</Styled(Content)>
`;

exports[`Testing PostLoadIndicator Component renders as expected in multiple 1`] = `
<Styled(Content)
  scrollEnabled={false}
>
  <PlaceholderContainer
    animatedComponent={
      <LinearGradient
        colors={
          Array [
            "#eee",
            "#ddd",
            "#eee",
          ]
        }
        end={
          Object {
            "x": 0,
            "y": 0,
          }
        }
        start={
          Object {
            "x": 1,
            "y": 0,
          }
        }
        style={
          Object {
            "flex": 1,
            "width": 125,
          }
        }
      />
    }
    delay={1000}
    duration={1000}
  >
    <BarIndicator
      delay={40}
      key="0"
    />
    <BarIndicator
      delay={80}
      key="80"
    />
    <BarIndicator
      delay={120}
      key="160"
    />
    <BarIndicator
      delay={160}
      key="240"
    />
    <BarIndicator
      delay={200}
      key="320"
    />
    <BarIndicator
      delay={240}
      key="400"
    />
    <BarIndicator
      delay={280}
      key="480"
    />
    <BarIndicator
      delay={320}
      key="560"
    />
    <BarIndicator
      delay={360}
      key="640"
    />
    <BarIndicator
      delay={400}
      key="720"
    />
    <BarIndicator
      delay={440}
      key="800"
    />
    <BarIndicator
      delay={480}
      key="880"
    />
    <BarIndicator
      delay={520}
      key="960"
    />
    <BarIndicator
      delay={560}
      key="1040"
    />
    <BarIndicator
      delay={600}
      key="1120"
    />
    <BarIndicator
      delay={640}
      key="1200"
    />
  </PlaceholderContainer>
</Styled(Content)>
`;
